fixed spacing and overflow errors

--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,11 @@ html,body{
 .resume-body-left{
 }
 .resume-body-left-top{
-    height:20%;
+    height:33%;
 }
 .resume-body-left-middle{
-    height:20%;
+    height:33%;
 }
 .resume-body-left-bottom{
-    height:20%;
+    height:33%;
 }
